--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,4 +1,4 @@
-${ courseList.length
+${ fetched
 ? `<header class="mdl-color--${courseList[0].color}">
     <div class="h-100 w-100 m-0 mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
