--- a/src/app/shared/components/spinner/spinner.component.scss
+++ b/src/app/shared/components/spinner/spinner.component.scss
@@ -1,14 +1,19 @@
 app-spinner {
     .loader {
-        background-image: url("./../resources/icon.png");
+        background-image: url("./../resources/icon-alpha.png");
     }
     display: flex;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 56px);
+    top: 56px;
+    background-color: #fafafa;
     justify-content: center;
     align-items: center;
     img {
+        background-color: black;
+        height: 3em;
+        width: 3em;
         @keyframes logo {
             0%,
             100% {
@@ -16,8 +21,8 @@ app-spinner {
                 height: 2.75em;
             }
             50% {
-                width: 2em;
-                height: 2em;
+                width: 3em;
+                height: 3em;
             }
         }
         border-radius: 50%;
