Remove public path

--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <div class="mdl-layout__header-row">
         ${'main' === routeName
         ? `<h1 class="w-100 border-box ellipsis overflow-h  mdl-layout-title mdl-typography--text-center">
-            <img src="/assets/icon-alpha.png" class="p-absolute logo" />
+            <img src="assets/icon-alpha.png" class="p-absolute logo" />
             ${title}
         </h1>`
         : `<h1 class="w-100 border-box ellipsis overflow-h mdl-layout-title mdl-typography--text-center">
