Remove ripple effect

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -25,7 +25,7 @@
     <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center p-relative">
         </br>
         <button onclick="showAll()"
-            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+            class="mdl-button mdl-button--raised mdl-button--colored">
             Thématiques
         </button>
         <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center">
