--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,11 @@
 @import "./shared/components/retry/retry.component.scss";
 
 app {
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     main {
         margin-bottom: 35px;
         router {
