--- a/src/app/courses/course-list/course-list.component.scss
+++ b/src/app/courses/course-list/course-list.component.scss
@@ -6,9 +6,15 @@ app-course-list {
         display: initial;
         .mdl-layout__header-row {
             height: 40px;
-            .material-icons {
-                left: -2.2em;
-                top: -0.1em;
+            .mdl-layout-title {
+                .material-icons {
+                    left: -2.2em;
+                    top: -0.1em;
+                }
+            }
+            #course-menu {
+                right: 8px;
+                position: absolute;
             }
         }
     }
