Change base line

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,12 +20,13 @@
 </header>
 <section class="p-0 courses mdl-typography--text-center border-box mdl-grid mdl-color-text--accent-contrast">
     <h3 class="mdl-cell mdl-cell--8-col mdl-typography--display-1 p-relative">
-        Progressez en Programmation en prélevant vos extraits préférés
+        Supports de cours
+        <br>
+        Open Source
     </h3>
     <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center p-relative">
         </br>
-        <button onclick="showAll()"
-            class="mdl-button mdl-button--raised mdl-button--colored">
+        <button onclick="showAll()" class="mdl-button mdl-button--raised mdl-button--colored">
             Thématiques
         </button>
         <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center">
