--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -2,7 +2,7 @@ ${ fetched
 ? `<header class="mdl-color--${courseList[0].color}">
     <div class="h-100 w-100 m-0 mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
-            <h2 class="display-1" onclick="onCourse('${courseList[0].name}')">${courseList[0].name}</h2>
+            <h2 class="display-1 m-0 p-0 mdl-typography--text-center overflow-h" onclick="onCourse('${courseList[0].name}')">${courseList[0].name}</h2>
             <p class="w-100 mdl-card__supporting-text mdl-typography--text-center mdl-color-text--grey-50">
                 ${courseList[0].description}
             </p>
